# workflow-telemetry-rust

./: .gitignore  Cargo.toml  README.md  SAMPLE.md  action.yml  package-lock.json  package.json  telemetry
.github/workflows/: build.yml  test-action.yml
docs/: DESIGN.md  DEVELOPMENT.md  WHY.md
docs/charts/: README.md
src/: index.js  main.rs  post.js
src/charts/: mod.rs
src/collectors/: cpu.rs  memory.rs  mod.rs
src/reporters/: markdown.rs  mermaid.rs  mod.rs  png.rs  svg.rs
